--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "build": "unbuild"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.28.1",
     "@react-native-menu/menu": "^1.2.2",
     "@react-navigation/native": "^7.0.14",
     "@types/bun": "latest",
     "@types/react": "^19.0.10",
     "expo-haptics": "~14.0.1",
     "expo-symbols": "~0.2.2",
-    "react-native": "0.76.7",
     "react": "18.3.1",
+    "react-native": "0.76.7",
     "unbuild": "^3.5.0"
   },
   "peerDependencies": {
