--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@react-navigation/native": "^7.0.14",
     "@types/bun": "latest",
     "@types/react": "^19.0.10",
+    "color": "^5.0.0",
     "expo-haptics": "~14.0.1",
     "expo-symbols": "~0.2.2",
     "react": "18.3.1",
@@ -47,13 +48,11 @@
   "peerDependencies": {
     "@react-native-menu/menu": ">=1.2.0",
     "@react-navigation/native": ">=7.0.0",
+    "color": ">=5.0.0",
     "react": ">=18.3.1",
     "react-native": ">=0.76.0",
     "typescript": "^5",
     "expo-haptics": "^14",
     "expo-symbols": ">=0.2.2"
-  },
-  "dependencies": {
-    "color": "^5.0.0"
   }
 }
