--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild"
+    "build": "unbuild",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
@@ -41,19 +42,26 @@
     "@types/react": "^19.0.10",
     "color": "^5.0.0",
     "expo-haptics": "~14.0.1",
+    "expo-router": "~4.0.17",
     "expo-symbols": "~0.2.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "oxlint": "^0.16.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
     "unbuild": "^3.5.0"
   },
   "peerDependencies": {
     "@react-native-menu/menu": ">=1.2.0",
     "@react-navigation/native": ">=7.0.0",
     "color": ">=5.0.0",
-    "react": ">=18.3.1",
+    "expo-haptics": ">=14.0.1",
+    "expo-router": ">=4.0.17",
+    "expo-symbols": ">=0.2.2",
+    "react-native-gesture-handler": ">=2.20.2",
     "react-native": ">=0.76.0",
-    "typescript": "^5",
-    "expo-haptics": "^14",
-    "expo-symbols": ">=0.2.2"
+    "react": ">=18.3.1",
+    "typescript": ">=5.0.0"
   }
 }
