--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prepack": "unbuild",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix --fix-suggestions"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
@@ -41,6 +44,7 @@
     "@types/bun": "latest",
     "@types/react": "^19.0.10",
     "color": "^5.0.0",
+    "eslint": "^9.22.0",
     "expo-haptics": "~14.0.1",
     "expo-router": "~4.0.17",
     "expo-symbols": "~0.2.2",
@@ -50,6 +54,7 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "typescript": "^5.8.2",
     "unbuild": "^3.5.0"
   },
   "peerDependencies": {
@@ -62,6 +67,9 @@
     "react-native-gesture-handler": ">=2.20.2",
     "react-native": ">=0.76.0",
     "react": ">=18.3.1",
-    "typescript": ">=5.0.0"
+    "typescript": ">=5.8.2"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,mts,cts,cjs,mjs}": "bun run lint"
   }
 }
